[package]
name = "adder"
version = "0.1.0"
authors = ["marcus_oa <marcus.official1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# add a dependency on the crate add-one for adder crate
# Note: Workspaces don't assume dependencies
add-one = { path = "../add-one"}
add-two = { path = "../add-two"}
rand = "0.5.5"
